# etymon

./: Cargo.toml  README.md  etym_gum_tui.sh
