[package]
name = "etym"
version = "0.0.8"
edition = "2021"
description = "Queries EtymOnline.com to look up etymologies for words"
readme = "README.md"
keywords = ["etymology", "linguistics", "cli"]

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["cargo"] }
regex = "1"
scraper = "0.15"
textwrap = { version = "0.16", features = ["terminal_size"] }
ureq = "2"
urlencoding = "2.1"

