[package]
name = "etym"
description = "Queries EtymOnline.com to look up etymologies for words"
readme = "README.md"
keywords = ["etymology", "linguistics", "cli"]
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "3", features = ["cargo"] }
regex = "1"
scraper = "0.15"
textwrap = { version = "0.16", features = ["terminal_size"] }
ureq = "2"
urlencoding = "2.1"

